hides body-copy on mobile. fix for now

--- a/wp-content/themes/zocdoc/styles/input/combined/_landing-page.less
+++ b/wp-content/themes/zocdoc/styles/input/combined/_landing-page.less
@@ -33,6 +33,9 @@
 		font-size: 1.5rem;
 		line-height: 1;
 		font-family: kievit-slab-book, Georgia, serif;
+		@media @mobile {
+			/*display: none;*/
+		}
 	}
 
 
